--- a/index.html
+++ b/index.html
@@ -4,112 +4,237 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SEC Smart Locks | Rent-Based Access Control</title>
-  <script src="https://cdn.tailwindcss.com"></script> <!-- Correct TailwindCDN -->
+  <style>
+    /* Basic Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.6;
+      background: #f4f4f4;
+      color: #333;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    /* Header Hero Section */
+    .hero {
+      background: #1e3a8a;
+      color: white;
+      padding: 80px 20px;
+      text-align: center;
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 20px;
+      margin-bottom: 30px;
+    }
+
+    .hero a {
+      background: white;
+      color: #1e3a8a;
+      padding: 12px 30px;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    .hero a:hover {
+      background: #e2e8f0;
+    }
+
+    /* Section Styles */
+    section {
+      padding: 60px 20px;
+    }
+
+    .container {
+      max-width: 1100px;
+      margin: auto;
+      text-align: center;
+    }
+
+    h2 {
+      font-size: 36px;
+      margin-bottom: 30px;
+    }
+
+    p {
+      font-size: 18px;
+      margin-bottom: 20px;
+    }
+
+    /* Grid Styles */
+    .grid {
+      display: grid;
+      gap: 30px;
+    }
+
+    @media (min-width: 768px) {
+      .grid-3 {
+        grid-template-columns: repeat(3, 1fr);
+      }
+      .grid-2 {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    .card {
+      background: white;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      transition: transform 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    /* Contact Section */
+    .contact {
+      background: #1e3a8a;
+      color: white;
+    }
+
+    .contact a {
+      background: white;
+      color: #1e3a8a;
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 25px;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    .contact a:hover {
+      background: #e2e8f0;
+    }
+
+    /* Footer */
+    footer {
+      background: #111827;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body>
 
   <!-- Hero Section -->
-  <section class="bg-blue-600 text-white p-10 text-center">
-    <h1 class="text-4xl font-bold mb-4">SEC Smart Locks</h1>
-    <p class="text-lg mb-6">Revolutionizing Rent-Based Room Access in Tanzania</p>
-    <a href="#contact" class="bg-white text-blue-600 font-semibold py-2 px-6 rounded hover:bg-gray-200">Get Started</a>
+  <section class="hero">
+    <h1>SEC Smart Locks</h1>
+    <p>Revolutionizing Rent-Based Room Access in Tanzania</p>
+    <a href="#contact">Get Started</a>
   </section>
 
   <!-- About Us -->
-  <section class="p-10">
-    <div class="max-w-5xl mx-auto">
-      <h2 class="text-3xl font-bold mb-6 text-center">About Us</h2>
-      <p class="text-lg leading-relaxed text-center">
-        At SEC, we offer smart locks powered by SIM card technology, allowing landlords to remotely control room access based on rental payments. 
-        Secure, reliable, and built for the future of property management in Tanzania.
-      </p>
+  <section>
+    <div class="container">
+      <h2>About Us</h2>
+      <p>At SEC, we offer smart locks powered by SIM card technology, allowing landlords to remotely control room access based on rental payments. Secure, reliable, and built for the future of property management in Tanzania.</p>
     </div>
   </section>
 
   <!-- How It Works -->
-  <section class="bg-white p-10">
-    <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-bold mb-10 text-center">How It Works</h2>
-      <div class="grid md:grid-cols-3 gap-8 text-center">
-        <div>
-          <div class="text-blue-600 text-5xl mb-4">🔒</div>
-          <h3 class="text-xl font-semibold mb-2">Install Smart Lock</h3>
-          <p>Install our SIM-based smart lock on your doors easily — no complicated wiring needed.</p>
+  <section>
+    <div class="container">
+      <h2>How It Works</h2>
+      <div class="grid grid-3">
+        <div class="card">
+          <div style="font-size: 40px;">🔒</div>
+          <h3>Install Smart Lock</h3>
+          <p>Easy to install on your doors — no complicated wiring needed.</p>
         </div>
-        <div>
-          <div class="text-blue-600 text-5xl mb-4">📲</div>
-          <h3 class="text-xl font-semibold mb-2">Control Remotely</h3>
-          <p>Use your phone to lock or unlock rooms based on rent payment status — anywhere, anytime.</p>
+        <div class="card">
+          <div style="font-size: 40px;">📲</div>
+          <h3>Control Remotely</h3>
+          <p>Manage room access via phone based on rent payments.</p>
         </div>
-        <div>
-          <div class="text-blue-600 text-5xl mb-4">💵</div>
-          <h3 class="text-xl font-semibold mb-2">Automate Payments</h3>
-          <p>Our system connects to payment data (like Vodacom M-Pesa) to automatically manage access.</p>
+        <div class="card">
+          <div style="font-size: 40px;">💵</div>
+          <h3>Automate Payments</h3>
+          <p>Connects to Vodacom/M-Pesa for automatic rent-based control.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Features -->
-  <section class="p-10 bg-gray-100">
-    <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-bold mb-8 text-center">Key Features</h2>
-      <div class="grid md:grid-cols-2 gap-8">
-        <div class="p-6 bg-white rounded shadow">
-          <h3 class="text-2xl font-semibold mb-3">Remote Lock/Unlock</h3>
+  <!-- Key Features -->
+  <section>
+    <div class="container">
+      <h2>Key Features</h2>
+      <div class="grid grid-2">
+        <div class="card">
+          <h3>Remote Lock/Unlock</h3>
           <p>Grant or restrict access instantly using GSM communication.</p>
         </div>
-        <div class="p-6 bg-white rounded shadow">
-          <h3 class="text-2xl font-semibold mb-3">Rent Expiry Auto-Lock</h3>
-          <p>Automatically restrict access when rent is unpaid — no manual work required.</p>
+        <div class="card">
+          <h3>Rent Expiry Auto-Lock</h3>
+          <p>Locks automatically when rent is unpaid — stress-free management.</p>
         </div>
-        <div class="p-6 bg-white rounded shadow">
-          <h3 class="text-2xl font-semibold mb-3">Backup Key Access</h3>
-          <p>Physical key available in emergencies, while smart system remains in full control.</p>
+        <div class="card">
+          <h3>Backup Key Access</h3>
+          <p>Physical key available when needed, without losing smart control.</p>
         </div>
-        <div class="p-6 bg-white rounded shadow">
-          <h3 class="text-2xl font-semibold mb-3">Battery Backup</h3>
-          <p>Never worry about power cuts — our smart locks run even when electricity is out.</p>
+        <div class="card">
+          <h3>Battery Backup</h3>
+          <p>Smart locks operate even during power outages.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Product Models -->
-  <section class="p-10">
-    <div class="max-w-5xl mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-8">Our Smart Locks</h2>
-      <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-white p-6 rounded shadow">
-          <h3 class="text-xl font-semibold mb-4">Basic Model</h3>
+  <!-- Our Products -->
+  <section>
+    <div class="container">
+      <h2>Our Smart Locks</h2>
+      <div class="grid grid-3">
+        <div class="card">
+          <h3>Basic Model</h3>
           <p>Affordable and reliable for individual landlords.</p>
         </div>
-        <div class="bg-white p-6 rounded shadow">
-          <h3 class="text-xl font-semibold mb-4">Advanced Model</h3>
-          <p>Supports multiple rooms, centralized management, and extra battery life.</p>
+        <div class="card">
+          <h3>Advanced Model</h3>
+          <p>Supports multiple rooms with extended battery life.</p>
         </div>
-        <div class="bg-white p-6 rounded shadow">
-          <h3 class="text-xl font-semibold mb-4">Enterprise Model</h3>
-          <p>Perfect for large buildings, full remote control with API integration.</p>
+        <div class="card">
+          <h3>Enterprise Model</h3>
+          <p>Best for large buildings with API integration and centralized control.</p>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="bg-blue-600 text-white p-10">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-4">Contact Us</h2>
-      <p class="mb-6">Ready to upgrade your property with SEC Smart Locks?</p>
-      <p class="mb-2">📞 Phone: +255 XXX XXX XXX</p>
-      <p class="mb-2">✉️ Email: info@secsmartlocks.co.tz</p>
-      <p class="mb-2">📍 Location: Dar es Salaam, Tanzania</p>
-      <a href="#contact" class="mt-6 inline-block bg-white text-blue-600 py-2 px-6 rounded hover:bg-gray-200">Request a Demo</a>
+  <section id="contact" class="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>Ready to upgrade your property with SEC Smart Locks?</p>
+      <p>📞 Phone: +255 XXX XXX XXX</p>
+      <p>✉️ Email: info@secsmartlocks.co.tz</p>
+      <p>📍 Location: Dar es Salaam, Tanzania</p>
+      <a href="#contact">Request a Demo</a>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-white text-center p-4">
+  <footer>
     &copy; 2025 SEC Smart Locks | All Rights Reserved
   </footer>
 
