--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
     <div class="container">
       <h2>Contact Us</h2>
       <p>Ready to upgrade your property with SEC Smart Locks?</p>
-      <p>📞 Phone: +255 XXX XXX XXX</p>
-      <p>✉️ Email: info@secsmartlocks.co.tz</p>
+      <p>📞 Phone: +255 745234409</p>
+      <p>✉️ Email: info@smartlocks.co.tz</p>
       <p>📍 Location: Dar es Salaam, Tanzania</p>
       <a href="#contact">Request a Demo</a>
     </div>
@@ -235,7 +235,7 @@
 
   <!-- Footer -->
   <footer>
-    &copy; 2025 SEC Smart Locks | All Rights Reserved
+    &copy; 2025 Smart Locks | All Rights Reserved
   </footer>
 
 </body>
