--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <h2>How It Works</h2>
       <div class="grid grid-3">
         <div class="card">
-          <div style="font-size: 40px;">🔒</div>
+          <div style="font-size: 40px;">🔑📱</div>
           <h3>Install Smart Lock</h3>
           <p>Easy to install on your doors — no complicated wiring needed.</p>
         </div>
