--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@
       <p>✉️ Email: info@smartlocks.co.tz</p>
       <p>📍 Location: Dar es Salaam, Tanzania</p>
       <a href="#contact">Request a Demo</a>
+      <a href="marketing.html" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded">Know more about us</a>
+
     </div>
   </section>
 
