--- a/marketing.html
+++ b/marketing.html
@@ -1,1 +1,128 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Smart Lock Solutions</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 1rem 0;
+            text-align: center;
+        }
+
+        nav {
+            background-color: #444;
+            padding: 1rem;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        section {
+            margin: 3rem 0;
+            padding: 2rem;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        p {
+            line-height: 1.6;
+            color: #555;
+        }
+
+        .btn {
+            display: inline-block;
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+
+        .btn:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1>Smart Lock Solutions</h1>
+        <p>Revolutionize Your Property Management with Our Automated Smart Locks</p>
+    </header>
+
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#marketing">Learn How It Works</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <!-- Marketing Section -->
+    <section id="marketing" class="marketing">
+        <div class="container">
+            <h2>Protect Your Income with Our Smart Lock System</h2>
+            <p>Say goodbye to chasing late payments, lost keys, and tenant disputes. Our smart lock system allows you to securely manage your rooms based on rent payment.</p>
+            
+            <p>Our system ensures that your rooms lock or unlock based on whether rent is paid. You won’t need to lift a finger, as the system works automatically — protecting your income every day.</p>
+            
+            <h3>Flexible Payment Plans</h3>
+            <p>We offer easy payment options with <strong>12 to 36 month payment plans</strong>. Just one payment per month and you get full control over your income from Day One.</p>
+
+            <h3>Free Emergency Backup</h3>
+            <p>For every 10-room setup, we’ll include a free emergency power bank to ensure peace of mind, even during power outages.</p>
+
+            <p>Your tenants will appreciate the convenience, and you’ll enjoy the <strong>predictable income</strong>, <strong>no stress</strong>, and <strong>full control</strong>.</p>
+
+            <a href="#contact" class="btn">Contact Us for More Information</a>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>If you are ready to secure your property with our smart lock systems, please reach out to us!</p>
+            <p>We'd love to discuss how we can help improve your property management.</p>
+            <a href="mailto:info@smartlocks.com" class="btn">Email Us</a>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Smart Lock Solutions. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+
+</html>
 
