--- a/marketing.html
+++ b/marketing.html
@@ -1,1 +1,147 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Smart Lock Solutions</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f7f9fb;
+    }
+
+    header {
+      background-color: #1f2937;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+
+    nav {
+      background-color: #374151;
+      text-align: center;
+      padding: 1rem;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    section {
+      padding: 3rem 1rem;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .block {
+      background-color: white;
+      border-radius: 12px;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    }
+
+    .highlight {
+      background-color: #e0f7fa;
+    }
+
+    h2, h3 {
+      color: #1f2937;
+    }
+
+    p {
+      color: #4b5563;
+      line-height: 1.7;
+      font-size: 1.05rem;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 1rem;
+      background-color: #2563eb;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      border-radius: 6px;
+      text-decoration: none;
+    }
+
+    .btn:hover {
+      background-color: #1d4ed8;
+    }
+
+    footer {
+      background-color: #111827;
+      color: #9ca3af;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+  </style>
+</head>
+
+<body>
+
+  <header>
+    <h1>Smart Lock Solutions</h1>
+    <p>Modern Security for Landlords — Automated by Rent</p>
+  </header>
+
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#marketing">How It Works</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <!-- Marketing Section -->
+  <section id="marketing">
+    <div class="block highlight">
+      <h2>Protect Your Income with Smart Lock Technology</h2>
+      <p>Say goodbye to chasing late payments, lost keys, and arguments with tenants. With our automated smart lock system, your rooms lock or unlock themselves — based on rent payments.</p>
+    </div>
+
+    <div class="block">
+      <h3>Hands-Free Security</h3>
+      <p>Once rent expires, the lock simply stops working. Once rent is paid, it reactivates instantly. No keys, no follow-up, no hassle. Everything works automatically in the background.</p>
+    </div>
+
+    <div class="block highlight">
+      <h3>Flexible Payment Options</h3>
+      <p>We offer <strong>12 to 36 month payment plans</strong> that cover everything — installation, hardware, cloud access, and support. One flat monthly fee. You start controlling your income from Day One.</p>
+    </div>
+
+    <div class="block">
+      <h3>Free Backup Power Offer</h3>
+      <p>Every 10-room setup includes a free emergency power bank — so your system keeps working even during blackouts. Peace of mind for you, convenience for your tenants.</p>
+    </div>
+
+    <div class="block highlight">
+      <h3>Why Landlords Love It</h3>
+      <p>Your tenants enjoy the convenience. You enjoy predictable income, zero stress, and full control — all backed by smart technology.</p>
+      <a href="#contact" class="btn">Get Started Now</a>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <div class="block">
+      <h2>Contact Us</h2>
+      <p>Ready to bring automation to your property? Contact us today and discover how easy it is to secure your income with our smart lock systems.</p>
+      <a href="mailto:info@smartlocks.com" class="btn">Email Us</a>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Smart Lock Solutions. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
