--- a/marketing.html
+++ b/marketing.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,23 +59,31 @@
     .container {
       max-width: 1000px;
       margin: auto;
-      padding: 2rem 1.5rem;
+      padding: 3rem 1.5rem;
     }
 
-    section.content-section {
+    section {
       background: white;
-      padding: 2rem;
+      padding: 2.5rem;
       border-radius: 12px;
-      margin: 1rem 0;
+      margin-bottom: 2rem;
       box-shadow: 0 4px 15px rgba(0,0,0,0.05);
     }
 
-    h2, h3 {
-      color: #004080;
+    h2 {
+      font-size: 2rem;
       margin-bottom: 1rem;
+      color: #004080;
+    }
+
+    h3 {
+      color: #007BFF;
+      margin-top: 1.5rem;
+      font-size: 1.3rem;
     }
 
     p {
+      margin: 1rem 0;
       line-height: 1.7;
     }
 
@@ -116,46 +125,28 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <div class="container">
+  <section id="marketing" class="container">
+    <h2>Protect Your Income with Our Smart Lock System</h2>
+    <p>Say goodbye to chasing late payments, lost keys, and tenant disputes. Our smart lock system lets you manage your rooms based on rent payment — automatically.</p>
+    <p>The system ensures your rooms lock or unlock depending on rent status. No manual intervention needed. You gain protection, automation, and peace of mind.</p>
 
-    <section id="marketing" class="content-section">
-      <h2>Protect Your Income with Our Smart Lock System</h2>
-    </section>
+    <h3>Flexible Payment Plans</h3>
+    <p>Enjoy hassle-free payment with <strong>12 to 36-month plans</strong>. One simple monthly payment, full control from Day One.</p>
 
-    <section class="content-section">
-      <p>Say goodbye to chasing late payments, lost keys, and tenant disputes. Our smart lock system lets you manage your rooms based on rent payment — automatically.</p>
-    </section>
+    <h3>Free Emergency Backup</h3>
+    <p>Get a <strong>free emergency power bank</strong> for every 10-room installation — ensuring reliability even during outages.</p>
 
-    <section class="content-section">
-      <p>The system ensures your rooms lock or unlock depending on rent status. No manual intervention needed. You gain protection, automation, and peace of mind.</p>
-    </section>
+    <p>Tenants benefit from convenience. You gain <strong>predictable income</strong>, <strong>zero stress</strong>, and <strong>total control</strong>.</p>
 
-    <section class="content-section">
-      <h3>Flexible Payment Plans</h3>
-      <p>Enjoy hassle-free payment with <strong>12 to 36-month plans</strong>. One simple monthly payment, full control from Day One.</p>
-    </section>
+    <a href="#contact" class="btn">Contact Us for More Information</a>
+  </section>
 
-    <section class="content-section">
-      <h3>Free Emergency Backup</h3>
-      <p>Get a <strong>free emergency power bank</strong> for every 10-room installation — ensuring reliability even during outages.</p>
-    </section>
-
-    <section class="content-section">
-      <p>Tenants benefit from convenience. You gain <strong>predictable income</strong>, <strong>zero stress</strong>, and <strong>total control</strong>.</p>
-      <a href="#contact" class="btn">Contact Us for More Information</a>
-    </section>
-
-    <section id="contact" class="content-section">
-      <h2>Contact Us</h2>
-      <p>Ready to secure your property with our smart lock systems?</p>
-    </section>
-
-    <section class="content-section">
-      <p>We’d love to help. Reach out and discover how we can transform your property management.</p>
-      <a href="mailto:info@smartlocks.com" class="btn">Email Us</a>
-    </section>
-
-  </div>
+  <section id="contact" class="container">
+    <h2>Contact Us</h2>
+    <p>Ready to secure your property with our smart lock systems?</p>
+    <p>We’d love to help. Reach out and discover how we can transform your property management.</p>
+    <a href="mailto:info@smartlocks.com" class="btn">Email Us</a>
+  </section>
 
   <footer>
     <p>&copy; 2025 Smart Lock Solutions. All rights reserved.</p>
