--- a/marketing.html
+++ b/marketing.html
@@ -1,156 +1,141 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smart Lock Solutions</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #f9f9f9;
+      background-color: #f4f4f4;
       color: #333;
     }
 
     header {
-      background: linear-gradient(135deg, #004080, #007BFF);
+      background-color: #2c3e50;
       color: white;
+      padding: 2rem 1rem;
       text-align: center;
-      padding: 3rem 1rem;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      opacity: 0.9;
     }
 
     nav {
-      background: #fff;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      padding: 1rem 0;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      background-color: #34495e;
+      padding: 1rem;
+      text-align: center;
     }
 
     nav a {
+      color: #fff;
+      margin: 0 1rem;
       text-decoration: none;
-      color: #007BFF;
-      font-weight: 600;
-      transition: color 0.3s;
+      font-weight: bold;
     }
 
     nav a:hover {
-      color: #004080;
+      text-decoration: underline;
     }
 
     .container {
+      width: 90%;
       max-width: 1000px;
-      margin: auto;
-      padding: 3rem 1.5rem;
+      margin: 2rem auto;
     }
 
-    section {
-      background: white;
-      padding: 2.5rem;
-      border-radius: 12px;
+    .card {
+      background-color: white;
+      padding: 2rem;
       margin-bottom: 2rem;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+      border-left: 6px solid #2980b9;
+      border-radius: 6px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     }
 
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #004080;
-    }
-
-    h3 {
-      color: #007BFF;
-      margin-top: 1.5rem;
-      font-size: 1.3rem;
-    }
-
-    p {
-      margin: 1rem 0;
-      line-height: 1.7;
+    .card h3 {
+      margin-top: 0;
+      color: #2980b9;
     }
 
     .btn {
       display: inline-block;
-      background: linear-gradient(to right, #007BFF, #0056b3);
+      background-color: #2980b9;
       color: white;
-      padding: 12px 25px;
-      border-radius: 30px;
+      padding: 12px 24px;
       text-decoration: none;
-      font-weight: 600;
-      margin-top: 1.5rem;
-      transition: background 0.3s ease;
+      border-radius: 5px;
+      margin-top: 1rem;
     }
 
     .btn:hover {
-      background: linear-gradient(to right, #0056b3, #003366);
+      background-color: #1f6392;
     }
 
     footer {
+      background-color: #2c3e50;
+      color: white;
       text-align: center;
-      padding: 2rem 1rem;
-      background: #f0f0f0;
-      font-size: 0.9rem;
-      color: #666;
+      padding: 1rem;
+      margin-top: 2rem;
     }
   </style>
 </head>
-<body>
 
+<body>
   <header>
     <h1>Smart Lock Solutions</h1>
-    <p>Revolutionize Your Property Management with Our Automated Smart Locks</p>
+    <p>Revolutionize Your Property Management</p>
   </header>
 
   <nav>
     <a href="#home">Home</a>
-    <a href="#marketing">How It Works</a>
+    <a href="#marketing">Learn How It Works</a>
     <a href="#contact">Contact</a>
   </nav>
 
+  <!-- Marketing Section -->
   <section id="marketing" class="container">
-    <h2>Protect Your Income with Our Smart Lock System</h2>
-    <p>Say goodbye to chasing late payments, lost keys, and tenant disputes. Our smart lock system lets you manage your rooms based on rent payment — automatically.</p>
-    <p>The system ensures your rooms lock or unlock depending on rent status. No manual intervention needed. You gain protection, automation, and peace of mind.</p>
+    <div class="card">
+      <h3>Goodbye Late Payments</h3>
+      <p>Say goodbye to chasing late payments, lost keys, and tenant disputes. Our smart lock system allows you to securely manage your rooms based on rent payment.</p>
+    </div>
 
-    <h3>Flexible Payment Plans</h3>
-    <p>Enjoy hassle-free payment with <strong>12 to 36-month plans</strong>. One simple monthly payment, full control from Day One.</p>
+    <div class="card">
+      <h3>Automated Lock Control</h3>
+      <p>Our system ensures that your rooms lock or unlock based on whether rent is paid. You won’t need to lift a finger — the system works automatically to protect your income every day.</p>
+    </div>
 
-    <h3>Free Emergency Backup</h3>
-    <p>Get a <strong>free emergency power bank</strong> for every 10-room installation — ensuring reliability even during outages.</p>
+    <div class="card">
+      <h3>Flexible Payment Plans</h3>
+      <p>We offer easy payment options with <strong>12 to 36 month payment plans</strong>. Just one payment per month gives you full control over your income from Day One.</p>
+    </div>
 
-    <p>Tenants benefit from convenience. You gain <strong>predictable income</strong>, <strong>zero stress</strong>, and <strong>total control</strong>.</p>
+    <div class="card">
+      <h3>Free Emergency Backup</h3>
+      <p>For every 10-room setup, we’ll include a free emergency power bank to ensure peace of mind — even during power outages.</p>
+    </div>
 
-    <a href="#contact" class="btn">Contact Us for More Information</a>
+    <div class="card">
+      <h3>Smart, Stress-Free Management</h3>
+      <p>Your tenants will appreciate the convenience, and you’ll enjoy <strong>predictable income, no stress, and full control</strong>.</p>
+      <a href="#contact" class="btn">Contact Us for More Info</a>
+    </div>
   </section>
 
+  <!-- Contact Section -->
   <section id="contact" class="container">
-    <h2>Contact Us</h2>
-    <p>Ready to secure your property with our smart lock systems?</p>
-    <p>We’d love to help. Reach out and discover how we can transform your property management.</p>
-    <a href="mailto:info@smartlocks.com" class="btn">Email Us</a>
+    <div class="card">
+      <h3>Contact Us</h3>
+      <p>If you're ready to secure your property with our smart lock systems, reach out now! Let’s talk about how we can upgrade your property management.</p>
+      <a href="mailto:info@smartlocks.com" class="btn">Email Us</a>
+    </div>
   </section>
 
   <footer>
     <p>&copy; 2025 Smart Lock Solutions. All rights reserved.</p>
   </footer>
-
 </body>
+
 </html>
