--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
       <p>📍 Location: Dar es Salaam, Tanzania</p>
       <a href="#contact">Request a Demo</a>
       <a href="marketing.html" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded">Know more about us</a>
+      <a href="sales.html" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded">Landlords Pitch</a>
 
     </div>
   </section>
