--- a/marketing.html
+++ b/marketing.html
@@ -128,15 +128,14 @@
       <a href="#contact" class="btn">Contact Us for More Info</a>
     </div>
   </section>
-
-  <!-- Contact Section -->
+<!-- Contact Section -->
   <section id="contact" class="container">
-    
+    <div class>
       <h3>Contact Us</h3>
       <p>If you're ready to secure your property with our smart lock systems, reach out now! Let’s talk about how we can upgrade your property management.</p>
       <a href="mailto:info@smartlocks.com" class="btn">Email Us</a>
-  
-  </section>
+    </div>
+  </section>>
 
   <footer>
     <p>&copy; 2025 Smart Lock Solutions. All rights reserved.</p>
