--- a/marketing.html
+++ b/marketing.html
@@ -129,13 +129,37 @@
     </div>
   </section>
 <!-- Contact Section -->
-  <section id="contact" class="container">
-    <div class>
-      <h3>Contact Us</h3>
-      <p>If you're ready to secure your property with our smart lock systems, reach out now! Let’s talk about how we can upgrade your property management.</p>
-      <a href="mailto:info@smartlocks.com" class="btn">Email Us</a>
+<section id="contact" style="background-color: #ecf0f1; padding: 3rem 1rem;">
+  <div class="container" style="max-width: 800px; margin: auto;">
+    <div style="
+        background: white;
+        border: 2px dashed #27ae60;
+        padding: 2rem;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.05);
+        text-align: center;
+      ">
+      <h2 style="color: #27ae60;">Ready to Get Started?</h2>
+      <p style="font-size: 1.1rem; margin: 1rem 0;">
+        Secure your property with our smart lock systems today.
+        Contact us and let’s upgrade your rental management.
+      </p>
+      <a href="mailto:info@smartlocks.com" style="
+          display: inline-block;
+          background-color: #27ae60;
+          color: white;
+          padding: 12px 24px;
+          text-decoration: none;
+          border-radius: 5px;
+          font-weight: bold;
+          transition: background-color 0.3s ease;
+        " onmouseover="this.style.backgroundColor='#1e8449'" onmouseout="this.style.backgroundColor='#27ae60'">
+        Email Us Now
+      </a>
     </div>
-  </section>>
+  </div>
+</section>
+
 
   <footer>
     <p>&copy; 2025 Smart Lock Solutions. All rights reserved.</p>
