--- a/index.html
+++ b/index.html
@@ -25,35 +25,30 @@
     }
 
     /* Header Hero Section */
-    .hero {
-      background: #1e3a8a;
-      color: white;
-      padding: 80px 20px;
-      text-align: center;
-    }
+    
+      .hero {
+  background: url('images/photo.jpeg') no-repeat center center/cover;
+  color: white;
+  padding: 80px 20px;
+  text-align: center;
+  position: relative;
+}
 
-    .hero h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark overlay for readability */
+  z-index: 0;
+}
 
-    .hero p {
-      font-size: 20px;
-      margin-bottom: 30px;
-    }
+.hero h1, .hero p, .hero a {
+  position: relative;
+  z-index: 1;
+}
 
-    .hero a {
-      background: white;
-      color: #1e3a8a;
-      padding: 12px 30px;
-      border-radius: 5px;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-
-    .hero a:hover {
-      background: #e2e8f0;
-    }
 
     /* Section Styles */
     section {
