--- a/index.html
+++ b/index.html
@@ -127,16 +127,42 @@
       text-align: center;
       padding: 20px 0;
     }
+    .ussd-section {
+  background-color: #f5f5f5;
+  padding: 60px 20px;
+  text-align: center;
+}
+
+.ussd-content {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.ussd-content img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+}
+
   </style>
 </head>
 <body>
 
   <!-- Hero Section -->
   <section class="hero">
-    <h1>SEC Smart Locks</h1>
+    <h1>Smart Rent collection </h1>
     <p>Revolutionizing Rent-Based Room Access in Tanzania</p>
-    <a href="#contact">Get Started</a>
   </section>
+  
+<!-- USSD Payment Example Section -->
+<section class="ussd-section">
+  <div class="ussd-content">
+    <h2>Pay Rent with M-Pesa</h2>
+    <p>Use our USSD code to easily pay rent directly from your phone.</p>
+    <img src="images/lipa.png" alt="USSD Payment Screen Example">
+  </div>
+</section>
 
   <!-- About Us -->
   <section>
