--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
   <!-- Hero Section -->
   <section class="hero">
     <h1>Smart Rent collection </h1>
-    <p>Revolutionizing Rent-Based Room Access in Tanzania</p>
+    <p>Revolutionizing Rent-Based Room Access in Tanzania and throughout Africa</p>
   </section>
   
 <!-- USSD Payment Example Section -->
 <section class="ussd-section">
   <div class="ussd-content">
-    <h2>Pay Rent with M-Pesa</h2>
-    <p>Use our USSD code to easily pay rent directly from your phone.</p>
+    <h2>Example to Pay Rent with M-Pesa</h2>
+    <p>Use your USSD code to easily pay rent directly from your phone.</p>
     <img src="images/lipa.png" alt="USSD Payment Screen Example">
   </div>
 </section>
@@ -167,8 +167,8 @@
   <!-- About Us -->
   <section>
     <div class="container">
-      <h2>About Us</h2>
-      <p>At SEC, we offer smart locks powered by SIM card technology, allowing landlords to remotely control room access based on rental payments. Secure, reliable, and built for the future of property management in Tanzania.</p>
+      <h2>Our mission</h2>
+      <p>At System, we offer smart locks powered by SIM card technology, allowing landlords to remotely control room access based on rental payments. Secure, reliable, and built for the future of property management in Tanzania.</p>
     </div>
   </section>
 
@@ -248,9 +248,8 @@
       <h2>Contact Us</h2>
       <p>Ready to upgrade your property with SEC Smart Locks?</p>
       <p>📞 Phone: +255 745234409</p>
-      <p>✉️ Email: info@smartlocks.co.tz</p>
+      <p>✉️ Email: system@gmail.com.co.tz</p>
       <p>📍 Location: Dar es Salaam, Tanzania</p>
-      <a href="#contact">Request a Demo</a>
       <a href="marketing.html" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded">Know more about us</a>
       
     </div>
