--- a/marketing.html
+++ b/marketing.html
@@ -85,7 +85,7 @@
 
 <body>
   <header>
-    <h1>Smart Lock Solutions</h1>
+    <h1>Rent-Based-Room Accesd</h1>
     <p>Revolutionize Your Property Management</p>
   </header>
 
