--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
   border-radius: 10px;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
 }
+.card-icon {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
 
   </style>
 </head>
@@ -168,7 +175,7 @@
   <section>
     <div class="container">
       <h2>Our mission</h2>
-      <p>At System, we offer smart locks powered by SIM card technology, allowing landlords to remotely control room access based on rental payments. Secure, reliable, and built for the future of property management in Tanzania.</p>
+      <p>At System, we offer Rent-Based Room Access Control  through exceptonally designed smart lock technology, allowing landlords to remotely control room access based on rental payments. Secure, reliable, and built for the future of property management in Tanzania and in whole Africa.</p>
     </div>
   </section>
 
@@ -178,10 +185,11 @@
       <h2>How It Works</h2>
       <div class="grid grid-3">
         <div class="card">
-          <div style="font-size: 40px;">🔑📱</div>
-          <h3>Install Smart Lock</h3>
-          <p>Easy to install on your doors — no complicated wiring needed.</p>
-        </div>
+  <img src="images/install-smart.jpg" alt="Smart Lock Installation" class="card-icon">
+  <h3>Install Smart Lock</h3>
+  <p>Easy to install on your doors — no complicated wiring needed.</p>
+</div>
+
         <div class="card">
           <div style="font-size: 40px;">📲</div>
           <h3>Control Remotely</h3>
@@ -190,7 +198,7 @@
         <div class="card">
           <div style="font-size: 40px;">💵</div>
           <h3>Automate Payments</h3>
-          <p>Connects to Vodacom/M-Pesa for automatic rent-based control.</p>
+          <p>Connects to Vodacom/M-Pesa or any mobile payment company for automatic rent-based control.</p>
         </div>
       </div>
     </div>
@@ -203,7 +211,7 @@
       <div class="grid grid-2">
         <div class="card">
           <h3>Remote Lock/Unlock</h3>
-          <p>Grant or restrict access instantly using GSM communication.</p>
+          <p>Grant or restrict access instantly using Online communication.</p>
         </div>
         <div class="card">
           <h3>Rent Expiry Auto-Lock</h3>
@@ -224,7 +232,7 @@
   <!-- Our Products -->
   <section>
     <div class="container">
-      <h2>Our Smart Locks</h2>
+      <h2> Our smart Rent Collection systems</h2>
       <div class="grid grid-3">
         <div class="card">
           <h3>Basic Model</h3>
@@ -234,10 +242,7 @@
           <h3>Advanced Model</h3>
           <p>Supports multiple rooms with extended battery life.</p>
         </div>
-        <div class="card">
-          <h3>Enterprise Model</h3>
-          <p>Best for large buildings with API integration and centralized control.</p>
-        </div>
+        
       </div>
     </div>
   </section>
