--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <h2>How It Works</h2>
       <div class="grid grid-3">
         <div class="card">
-  <img src="images/install-smart.jpg" alt="Smart Lock Installation" class="card-icon">
+  <img src="images/smart.jpg" alt="Smart Lock Installation" class="card-icon">
   <h3>Install Smart Lock</h3>
   <p>Easy to install on your doors — no complicated wiring needed.</p>
 </div>
