--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <h2>Contact Us</h2>
       <p>Ready to upgrade your property with SEC Smart Locks?</p>
       <p>📞 Phone: +255 745234409</p>
-      <p>✉️ Email: system@gmail.com.co.tz</p>
+      <p>✉️ Email: system@gmail.com</p>
       <p>📍 Location: Dar es Salaam, Tanzania</p>
       <a href="marketing.html" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded">Know more about us</a>
       
