--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
   <section id="contact" class="contact">
     <div class="container">
       <h2>Contact Us</h2>
-      <p>Ready to upgrade your property with SEC Smart Locks?</p>
+      <p>Ready to upgrade your property with Smart Rent Collection?</p>
       <p>📞 Phone: +255 745234409</p>
       <p>✉️ Email: system@gmail.com</p>
       <p>📍 Location: Dar es Salaam, Tanzania</p>
