--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
       <p>✉️ Email: system@gmail.com</p>
       <p>📍 Location: Dar es Salaam, Tanzania</p>
       <a href="marketing.html" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded">Know more about us</a>
+       <a href="fundi.html" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded">Maisha ni Fasheni</a>
       
     </div>
   </section>
