--- a/fundi.html
+++ b/fundi.html
@@ -76,7 +76,7 @@
     <h1>Maisha Ni Fashion</h1>
     <p class="subtitle">Your personal tailoring assistant, now on Android!</p>
 
-    <a class="download-btn" href="https://github.com/your-username/your-repo/releases/download/v1.0/maishani_fashion_v1.apk" download>
+    <a class="download-btn" href="https://github.com/your-username/your-repo/releases/download/v1.0/fundi_version1.apk" download>
       📥 Download APK (v1.0)
     </a>
 
