--- a/fundi.html
+++ b/fundi.html
@@ -76,9 +76,10 @@
     <h1>Maisha Ni Fashion</h1>
     <p class="subtitle">Your personal tailoring assistant, now on Android!</p>
 
-    <a class="download-btn" href="https://github.com/your-username/your-repo/releases/download/v1.0/fundi_version1.apk" download>
-      📥 Download APK (v1.0)
-    </a>
+ <a href="https://github.com/SEC-125-hash/System/releases/download/v0.1-beta/maishani_fashion_v1.apk">
+  <button>Download Maisha Ni Fashion App (APK)</button>
+</a>
+
 
     <div class="note">
       ⚠️ <strong>Note:</strong> After downloading, go to your phone's <em>Settings > Security</em> and enable <strong>Install unknown apps</strong> for your browser to install.
