--- a/fundi.html
+++ b/fundi.html
@@ -94,7 +94,7 @@
     <p class="subtitle">Your personal tailoring assistant, now on Android!</p>
 
  <a href="https://github.com/SEC-125-hash/System/releases/download/v0.1-beta/maishani_fashion_v1.apk">
-  <button>Download Maisha Ni Fashion App </button>
+  <button>Download Fundi App </button>
 </a>
 
 
