--- a/fundi.html
+++ b/fundi.html
@@ -93,7 +93,7 @@
     <h1>Maisha Ni Fashion</h1>
     <p class="subtitle">Your personal tailoring assistant, now on Android!</p>
 
- <a href="https://github.com/SEC-125-hash/System/releases/download/v0.1-beta/maishani_fashion_v1.apk">
+ <a href="https://github.com/SEC-125-hash/System/releases/tag/v0.1-beta">
   <button>Download Fundi App </button>
 </a>
 
