--- a/fundi.html
+++ b/fundi.html
@@ -99,7 +99,7 @@
 
 
     <div class="note">
-      ⚠️ <strong>Note:</strong> After downloading, go to your phone's <em>Settings > Security</em> and enable <strong>Install unknown apps</strong> for your browser to install.
+       <strong>Note:</strong> After downloading, go to your phone's <em>Settings > Security</em> and enable <strong>Install unknown apps</strong> for your browser to install.
     </div>
 
     <footer>
