--- a/fundi.html
+++ b/fundi.html
@@ -68,23 +68,7 @@
       font-size: 13px;
       color: #aaa;
     }
-      .download-btn {
-    display: inline-block;
-    background: #007bff;         /* Blue color */
-    color: white;
-    font-weight: 600;
-    padding: 14px 28px;
-    border-radius: 8px;
-    text-decoration: none;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
-  }
-
-  .download-btn:hover {
-    background: #0056b3;         /* Darker blue on hover */
-    box-shadow: 0 6px 12px rgba(0,0,0,0.2);
-  }
+     
   </style>
 </head>
 <body>
@@ -93,9 +77,23 @@
     <h1>Maisha Ni Fashion</h1>
     <p class="subtitle">Your personal tailoring assistant, now on Android!</p>
 
- <a href="https://github.com/SEC-125-hash/System/releases/download/v0.1-beta/fundi_version1.apk">
-  <button>Download Fundi App </button>
+<a href="https://github.com/SEC-125-hash/System/releases/download/v0.1-beta/fundi_version1.apk"
+   style="
+      display: inline-block;
+      background-color: #007bff;
+      color: white;
+      font-weight: 600;
+      padding: 14px 28px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;"
+   onmouseover="this.style.backgroundColor='#0056b3'; this.style.boxShadow='0 6px 12px rgba(0,0,0,0.2)'"
+   onmouseout="this.style.backgroundColor='#007bff'; this.style.boxShadow='0 4px 6px rgba(0,0,0,0.1)'">
+   Click to Download Fundi APK
 </a>
+
 
 
     <div class="note">
