--- a/fundi.html
+++ b/fundi.html
@@ -91,7 +91,7 @@
       transition: background-color 0.3s ease, box-shadow 0.3s ease;"
    onmouseover="this.style.backgroundColor='#0056b3'; this.style.boxShadow='0 6px 12px rgba(0,0,0,0.2)'"
    onmouseout="this.style.backgroundColor='#007bff'; this.style.boxShadow='0 4px 6px rgba(0,0,0,0.1)'">
-  Bofya kupakua Aplikesheni ya fundi
+  Bofya kupakua Aplikesheni ya Fundi
 </a>
 
 
